<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/include_user_not_found"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_not_found"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="100dp"
        android:contentDescription="@string/user_not_found"
        android:scaleType="fitCenter"
        android:src="@drawable/vc_not_found"
        app:layout_constraintBottom_toTopOf="@id/tv_description1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_description2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_not_found" />

    <TextView
        android:id="@+id/tv_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description1" />

</androidx.constraintlayout.widget.ConstraintLayout>